dark mode fixes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -191,12 +191,25 @@ p {
   height: 30vh;
   border: 1px solid #ccc;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: var(--background-color);
   text-align: center;
   padding: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+div.card {
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
+  border-color: var(--primary-text-color);
+  border-width: 2px;
+}
+
+
+
+h3 {
+  color: var(--primary-text-color);
 }
 
 .card:hover {
@@ -230,9 +243,11 @@ p {
 }
 
 button.card {
-  border: none;
-  background: none;
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
   padding: 0;
+  border-color: var(--primary-text-color);
+  border-width: 2px;
 }
 
 
