--- a/frontend/src/NewWrappedForm.css
+++ b/frontend/src/NewWrappedForm.css
@@ -1,5 +1,5 @@
 .pop-up-form-container {
-    background-color: rgb(0 0 0 / 50%);
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,10 +12,65 @@
 }
 
 .pop-up-form {
-    background-color: rgb(255 255 255 / 100%);
-    width: 50vw;
-    height: 50vh;
+    background-color: var(--background-color); /* Clean white background */
+    width: 40vw;
+    max-width: 500px; /* Ensure it looks good on smaller screens */
+    padding: 30px; /* Add padding for spacing */
+    border-radius: 15px; /* Rounded corners */
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3); /* Subtle shadow */
+    color: var(--primary-text-color); /* Darker text color for readability */
+    font-size: 18px; /* Adjust font size */
+    text-align: center; /* Center-align content */
     z-index: 2;
-    color: #000;
-    font-size: 24px;
 }
+
+.pop-up-form-label {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.5em;
+    color: var(--primary-text-color);
+    text-align: center;
+}
+
+.pop-up-form-input {
+    width: calc(100% - 20px); /* Full width minus padding for consistency */
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    border: 1px solid #cccccc; /* Subtle border */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 16px;
+    box-sizing: border-box; /* Ensure padding doesn't affect width */
+}
+
+.pop-up-form-input:focus {
+    outline: none;
+    border-color: #007BFF; /* Highlighted border when focused */
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+button[type='cancel'] {
+    background-color: #FF0000; /* Spotify green */
+    color: #ffffff;
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+  }
+
+button[type="cancel"]:hover {
+    background-color: #CC0000; /* Darker blue on hover */
+}
+
+button[type="cancel"]:active {
+    background-color: #990000; /* Even darker blue when clicked */
+}
+
+.button-align {
+    display: flex;
+}
+
