--- a/frontend/src/WrappedCard.css
+++ b/frontend/src/WrappedCard.css
@@ -2,6 +2,5 @@
     width: 200px;
     height: 200px;
     margin: 40px;
-    background-color: black;
-    color: white;
+    background-color: var(--background-color);;
 }
